@@ -5,58 +5,5 @@
 - Creating a server and client which uses `TCP` and `UDP`
 - Callbacks for `On Receive`, `On Connect` and `On Disconnect` for server
 - Callbacks for `On Receive` and `On Connect` for client
-- Sending messages from server to client both with tcp and udp by specifing the address to send to `(see example below)`
+- Sending messages from server to client both with tcp and udp by specifing the address to send to `(see examples [here](https://github.com/MurkyYT/netpywork/tree/main))`
 - Sending *large* `UDP` messages
-
-# Example
-```Python
-import netpywork as networking
-
-def server_receive(msg,proto,self:networking.server):
-    if(proto == networking.protocol.UDP):
-        msg: networking.udp_msg = msg
-        print("Server UDP:",msg.length,msg.data,msg.address)
-    if(proto == networking.protocol.TCP):
-        msg: networking.tcp_msg = msg
-        print("Server TCP:",msg.length,msg.data,msg.address)
-def server_connect(address,self: networking.server):
-    print(f"Client with ip {address} connected")
-    print(f"All clients: {self.get_clients()}")
-def server_disconnect(address,self: networking.server):
-    print(f"Client with ip {address} disconnected")
-    print(f"All clients: {self.get_clients()}")
-def client_connected(address,self: networking.client):
-    print(f"Client conncted to {address}")
-def client_receive(msg,proto,self: networking.client):
-    if(proto == networking.protocol.UDP):
-        msg: networking.udp_msg = msg
-        print("Client UDP:",msg.length,msg.data,msg.address)
-    if(proto == networking.protocol.TCP):
-        msg: networking.tcp_msg = msg
-        print("Client TCP:",msg.length,msg.data,msg.address)
-def main():
-    server = networking.server(12345)
-    server.on_receive = server_receive
-    server.on_connect = server_connect
-    server.on_disconnect = server_disconnect
-    client = networking.client('localhost',12345)
-    client.on_connect = client_connected
-    client.on_receive = client_receive
-    
-    server.run()
-    client.connect()
-    
-    client.send_reliable("Hello :)".encode())
-    client.send_unreliable(("Hello!!!").encode())
-    client.send_unreliable(("Hello!!!222").encode())
-    client.send_unreliable(("Hello!!!333").encode())
-    server.send_reliable("Hi1".encode(),client.address)
-    server.send_unreliable("Hi2".encode(),client.address)
-
-    client.close()
-    server.close()
-    
-    input("Press any key to exit...")
-if __name__ == "__main__":
-    main()
-```
