@@ -1,2 +1,2 @@
-TUPLE_VERSION = (0,0,3)
+TUPLE_VERSION = (0,0,4)
 VERSION = "".join(str(x) + '.' for x in TUPLE_VERSION)[:-1]
